outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval-3447181462481014390_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scoring, and a multi-stage selection process that prioritizes immediate distance, long-term connectivity, and exploration balance, with weights adjusted based on remaining nodes and path history.}
                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scoring, and a multi-stage selection process that prioritizes immediate distance, long-term connectivity, and exploration balance, with weights adjusted based on remaining nodes and path history.}
                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'
